--- a/carousel.css
+++ b/carousel.css
@@ -4,21 +4,33 @@ body{
 }
 
 .conteneur{
-	width: 50%;
-	height:50%;
-	margin: 200px;
+	width: 500px;
+	height:500px;
+	margin: 100px;
 	position: relative;
 	perspective: 1200px;
 }
 
-@keyframes tourne_carousel{
-	0%:{
-		transform: rotateY(0);
+@keyframes deplacement{
+	0%{
+		transform: rotateY(0deg) rotateX(20deg);
 		top:0;
-		left: 0;
+		left: 0;	
 	}
-	100%:{
-		transform: rotateY(360deg);
+	25%{
+		top:0;
+		left:100%;	
+	}
+	50%{
+		top:100%;
+		left:100%;	
+	}
+	75%{
+		top:100%;
+		left: 0;	
+	}
+	100%{
+		transform: rotateY(360deg) rotateX(20deg);		
 		top:0;
 		left: 0;
 	}
@@ -28,7 +40,7 @@ body{
 	position: absolute;
 	/* attention tout dans cet element sera en 3D */
 	transform-style: preserve-3d;
-	animation: tourne_carousel 10s infinite linear;
+	animation: deplacement 10s infinite linear;
 	width: 150px;
 	height: 150px;
 }
@@ -41,12 +53,8 @@ body{
 	display: block;
 	position: absolute;
 	width: 150px;
-	height: 150px;
-	left: 0;
-	top:0;
-	border: 2px solid black;	
-	width: 150px;
-	height: 150px;
+	height: 150px;	
+	border: 2px solid black;		
 }
 
 #child1{
